#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package MsgLogger
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-01
2008-10-07 Andy Salnikov
- Copied it from BaBar, made few serious modifications. Check README.