@@ -11,6 +11,14 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-03
+2008-11-03 Andy Salnikov
+- updated README file
+
+Tag: V00-00-02
+2008-11-03 Andy Salnikov
+- Few optimizations and small refactoring
+
 Tag: V00-00-01
 2008-10-07 Andy Salnikov
 - Copied it from BaBar, made few serious modifications. Check README.
